--- a/blog-details.html
+++ b/blog-details.html
@@ -195,7 +195,8 @@
     </section>
 
     <section class="">
-        <div class="md:absolute md:top-[44vw] md:ml-[64%] w-full md:w-[100%] overflow-hidden  bg-white md:bg-transparent  p-6 md:p-[3%]  rounded-lg">
+        <div
+            class="md:absolute md:top-[44vw] md:ml-[64%] w-full md:w-[100%] overflow-hidden  bg-white md:bg-transparent  p-6 md:p-[3%]  rounded-lg">
             <!-- Search Bar Section -->
             <div class="mb-[4%] md:mb-[1%] md:w-[21.99vw]">
                 <div class="relative flex ">
@@ -267,7 +268,8 @@
 
             <!-- Popular Tags Section -->
             <div class="md:w-[21.99vw] border border-2 border-02 rounded-md p-[5%] md:p-[1.2%]">
-                <h2 class="text-[5.5vw] font-[600] font-outfit mb-4 md:mb-[2%] text-01 md:text-[1.5vw]">Popular Tags</h2>
+                <h2 class="text-[5.5vw] font-[600] font-outfit mb-4 md:mb-[2%] text-01 md:text-[1.5vw]">Popular Tags
+                </h2>
                 <div class="flex flex-wrap gap-[4%] md:gap-[3%] md:text-[1vw] text-[4vw]">
                     <a href="#"
                         class="border border-011 border-2 px-[5%] py-[2%] mb-[4%] bg-transparent text-02 font-[500]  rounded-md hover:bg-01 hover:border-01 hover:text-white transition duration-300">
