--- a/book-now.html
+++ b/book-now.html
@@ -65,7 +65,9 @@
       <!-- Button and Mobile Menu Icon -->
       <div class="flex items-center gap-6">
         <button>
-          <img class="hidden md:block w-36 hover:scale-105 duration-300" src="assets/images/Group 71.svg" alt="" />
+          <a href="book-now.html">
+            <img class="hidden md:block w-36 hover:scale-105 duration-300" src="assets/images/Group 71.svg" alt="" />
+          </a>
           <ion-icon name="menu" class="text-3xl text-01 cursor-pointer md:hidden" onclick="mobileMenu(this)"></ion-icon>
         </button>
       </div>
@@ -77,8 +79,8 @@
     <div class="relative flex w-[100%]">
       <div class="relative flex w-[100%] overflow-hidden">
         <img
-          class="flex w-[100vw] h-[88vw] md:w-[100vw] md:h-[33.86vw] object-cover md:translate-x-[10%] md:scale-110 object-center"
-          src="assets/images/services details/second section third img.jpeg" alt="" />
+          class="flex w-[100vw] h-[88vw] md:w-[100vw] md:h-[33.86vw] object-cover   md:scale-x-[-1]   md:object-right "
+          src="assets/images/your skin.jpeg" alt="" />
 
         <div class="absolute inset-0 backdrop-blur-[10px] bg-01/50 md:w-[50vw]">
           <img class="absolute mt-[-11%] w-[15.9vw] hidden md:block" src="assets/images/leaf.svg" alt="" />
@@ -86,7 +88,7 @@
             src="assets/images/stars white.svg" alt="" />
           <div
             class="ml-[5%] md:ml-[0%] text-[7vw] md:text-[3vw] font-playfair font-[700] text-white flex flex-col md:ml-[25%] mt-[4%] md:mt-[-2%]">
-            <h3>Contact Us</h3>
+            <h3>Book Now</h3>
             <div
               class="h-[0.7vw] md:h-[0.2vw] mt-[1%] bg-gradient-to-r from-white to-white/0 w-[28vw] md:w-32 rounded-lg">
             </div>
@@ -100,9 +102,8 @@
     </div>
   </section>
 
-  <!-- Map Section -->
   <section>
-    <div class="relative flex flex-col w-full overflow-hidden">
+    <div class="relative flex flex-col w-full">
       <div class="absolute hidden md:block left-0 mt-[-1%]">
         <img class="w-[10vw] scale-x-[-1]" src="assets/images/flower 2.svg" alt="" />
       </div>
@@ -110,91 +111,127 @@
         <img src="assets/images/footer leafs.svg" alt="" />
       </div>
 
+      <div class="flex  w-[92vw] md:w-[75vw] bg-gradient-to-r from-01 to-transperant rounded-lg p-[2px] relative mx-auto mt-[12%]">
+        <div class="flex  w-[92vw] md:w-[75vw] relative rounded-lg bg-03">
 
-      <div
-        class=" relative w-[92vw] md:w-[75vw] md:justify-between flex flex-col md:flex-row bg-05/50 rounded-lg p-[5%] md:p-[3%] mx-auto mt-[10%] md:mt-[8%]">
-        <div class="flex md:order-2">
-          <iframe class="rounded-lg w-[81.34vw] md:w-[35.94vw] h-[69.87vw] md:h-[28.96vw]"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62735.88965829414!2d-118.487650701062!3d34.27025132512936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29ae9e3b761df%3A0xc9e6ed251ce63258!2s17539%20Chatsworth%20St%2C%20Granada%20Hills%2C%20CA%2091344%2C%20USA!5e0!3m2!1sen!2sin!4v1735844535647!5m2!1sen!2sin"
-            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="md:order-1 relative flex mt-[5%] md:mt-[0%] flex-col">
-          <div
-            class="w-full  text-[7vw]  md:text-[2.5vw]  md:w-[60%]  md:mt-[0%] mb-[5%] font-playfair font-[800] text-01 flex flex-col">
-            <h3 class="">Contact Us</h3>
-            <div class="h-[0.4vw] md:h-[0.15vw] bg-gradient-to-r from-01 to-03 w-[40%] md:w-[8vw]   ">
+          <div class=" flex flex-col w-[92vw] md:w-[75vw] relative   rounded-lg">
+            <div
+              class="w-[83.2vw] flex flex-col mx-auto text-[6vw] md:text-[2.5vw] md:w-[60%] mt-[5%] md:mt-[0%] mb-[5%] font-playfair font-[800] text-01 ">
+              <h3 class="">Select one or more services</h3>
+              <div class="h-[0.4vw] md:h-[0.15vw] bg-gradient-to-r from-01 to-03 w-[40%] md:w-[8vw]   ">
+              </div>
             </div>
-          </div>
-          <div>
-            <form action="">
-              <input
-                class="w-[81.34vw] md:w-[29.69vw] h-[12.54vw] md:h-[3.29vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
-                type="text" name="" id="" placeholder="First Name"><br>
-              <input
-                class="w-[81.34vw] md:w-[29.69vw] h-[12.54vw] md:h-[3.29vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
-                type="text" name="" id="" placeholder="Last Name"><br>
-              <input
-                class="w-[81.34vw] md:w-[29.69vw] h-[12.54vw] md:h-[3.29vw] pl-[4%] mb-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
-                type="email" name="" id="" placeholder="Email"><br>
-              <textarea
-                class="w-[81.34vw] md:w-[29.69vw] h-[31.2vw] md:h-[6.25vw] pl-[4%] pt-[3%] text-02 text-[4.5vw] md:text-[1.2vw] font-outfit font-[500] border border-1 border-02/20 rounded-lg focus:outline-none focus:ring-1 focus:ring-01 focus:border-01"
-                name="" id="" rows="5" placeholder="Message"></textarea><br>
-              <button class="mt-[5%] md:mt-[5%]"><img class="w-[24.8vw] md:w-[7vw]   hover:scale-105 duration-300"
-                  src="assets/images/submit btn.svg" alt=""></button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Drop us a line -->
-  <section>
-    <div class="relative flex flex-col w-[92vw] md:w-[75vw] overflow-hidden mx-auto mt-[5%] md:mt-[2%]">
-      <div
-        class="w-full  text-[10vw]  md:text-[2.5vw]  md:w-[60%]  md:mt-[2%] mb-[5%] md:mb-[2%] font-playfair font-[800] text-01 flex flex-col">
-        <h3 class="">Drop us a line</h3>
-        <div class="h-[0.4vw] md:h-[0.15vw] bg-gradient-to-r from-01 to-03 w-[40%] md:w-[8vw]   ">
-        </div>
-      </div>
 
-      <div>
-        <div class="flex items-start font-outfit text-02 fomt-[400] text-[3.7vw] md:text-[0.95vw] md:items-center ">
-          <img class="w-[4.9vw] md:w-[1.5vw]" src="assets/images/leafs vector.svg" alt="">
-          <p class="ml-[1%] w-[84.8vw] ">By providing your phone number via paper/digital intake forms and/or website
-            submissions, you consent to
-            receive calls and text messages regarding appointments, marketing, and other information. No purchase is
-            required. Message and data rates may apply.</p>
-        </div>
-        <div
-          class="flex items-start font-outfit text-02 fomt-[400] text-[3.7vw] md:text-[0.95vw] md:items-center md:mt-[1%]">
-          <img class="w-[4.9vw] md:w-[1.5vw]" src="assets/images/leafs vector.svg" alt="">
-          <p class="ml-[1%] w-[84.8vw] ">Beauty and Brawn Aesthetics will send approximately 4 texts a month (maximum)
-            offering special discounts and text-only deals. You may opt out at any time by replying STOP to the text
-            message.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+            <div class="relative flex grid grid-cols-1 md:grid-cols-2">
 
-  <section>
-    <div
-      class="relative flex flex-col w-[92vw] md:w-[75vw] bg-gradient-to-r from-01 to-white/0 p-[2px] rounded-lg mx-auto my-[10%] md:mt-[3%]">
-      <div class="rounded-lg bg-white">
-        <div
-          class="relative flex flex-col md:flex-row bg-05/50 rounded-lg p-[5%] md:p-[3%] font-outfit font-[400] text-02 text-[4.5vw] md:text-[1vw] md:items-center md:justify-between">
-          <div class="flex flex-col md:flex-row  items-center text-center md:text-left mt-[5%] md:mt-[0%]">
-            <img class="w-[10.67vw] md:w-[2.65vw]" src="assets/images/location.svg" alt="">
-            <p class="mt-[4%] md:mt-[0%] md:ml-[3%] md:w-[17vw]">17539 Chatsworth St Granada Hills, CA 91344</p>
-          </div>
-          <div class="border border-07 w-[65.06vw] md:w-[0.1vw] md:h-[2.7vw] mt-[5%] md:mt-[0%] mx-auto md:mx-0"></div>
-          <div class="flex flex-col md:flex-row  items-center text-center mt-[6%] md:mt-[0%] ">
-            <img class="w-[10.67vw] md:w-[2.65vw]" src="assets/images/call.svg" alt="">
-            <p class="mt-[4%] md:mt-[0%] md:ml-[3%] md:w-[7vw]">818-626-3507</p>
-          </div>
-          <div class="border border-07 w-[65.06vw] md:w-[0.1vw] md:h-[2.7vw] mt-[5%] md:mt-[0%] mx-auto md:mx-0"></div>
-          <div class="flex flex-col md:flex-row  items-center text-center mt-[6%] md:mt-[0%] ">
-            <img class="w-[10.67vw] md:w-[2.65vw]" src="assets/images/mail.svg" alt="">
-            <p class="mt-[4%] md:mt-[0%] md:ml-[3%]">info@beautyandbrawnaesthetics.com</p>
+              <!-- check box item -->
+              <div class="flex flex-col rounded-lg shadow-lg p-[4%] mb-[5%] md:w-[33.6vw]">
+                <div class="flex justify-between">
+                  <p class="font-playfair font-[500] text-01 text-[4vw] md:text-[1.2vw]">Neurotoxin (Botox/Dysport/Xeomin)</p>
+                  <label class="relative inline-block">
+                    <input type="checkbox"
+                      class="appearance-none w-[8vw] h-[8vw] md:w-[1.83vw] md:h-[1.83vw] bg-01/5 rounded-md  checked:border-none peer">
+                    <span class="absolute top-[22%] left-[20%]   flex   opacity-0 peer-checked:opacity-100">
+                      <img class="w-[5vw] " src="assets/images/check icon.svg" alt="" srcset="">
+                    </span>
+                  </label>
+
+                </div>
+                <div class="flex font-outfit text-02 text-[3.75vw] md:text-[1vw]">
+                  <p class="mr-[10%]">1h</p>
+                  <ul class="list-disc">
+                    <li>Price varies </li>
+                  </ul>
+                  <p class="ml-[5%]">$12/unit</p>
+                </div>
+              </div>
+              <!-- check box item -->
+              <div class="flex flex-col rounded-lg shadow-lg p-[4%] mb-[5%] md:w-[33.6vw]">
+                <div class="flex justify-between">
+                  <p class="font-playfair font-[500] text-01 text-[4vw] md:text-[1.2vw]">Neurotoxin (Botox/Dysport/Xeomin)</p>
+                  <label class="relative inline-block">
+                    <input type="checkbox"
+                      class="appearance-none w-[8vw] h-[8vw] md:w-[1.83vw] md:h-[1.83vw] bg-01/5 rounded-md  checked:border-none peer">
+                    <span class="absolute top-[22%] left-[20%]   flex   opacity-0 peer-checked:opacity-100">
+                      <img class="w-[5vw] " src="assets/images/check icon.svg" alt="" srcset="">
+                    </span>
+                  </label>
+
+                </div>
+                <div class="flex font-outfit text-02 text-[3.75vw] md:text-[1vw]">
+                  <p class="mr-[10%]">1h</p>
+                  <ul class="list-disc">
+                    <li>Price varies </li>
+                  </ul>
+                  <p class="ml-[5%]">$12/unit</p>
+                </div>
+              </div>
+              <!-- check box item -->
+              <div class="flex flex-col rounded-lg shadow-lg p-[4%] mb-[5%] md:w-[33.6vw]">
+                <div class="flex justify-between">
+                  <p class="font-playfair font-[500] text-01 text-[4vw] md:text-[1.2vw]">Neurotoxin (Botox/Dysport/Xeomin)</p>
+                  <label class="relative inline-block">
+                    <input type="checkbox"
+                      class="appearance-none w-[8vw] h-[8vw] md:w-[1.83vw] md:h-[1.83vw] bg-01/5 rounded-md  checked:border-none peer">
+                    <span class="absolute top-[22%] left-[20%]   flex   opacity-0 peer-checked:opacity-100">
+                      <img class="w-[5vw] " src="assets/images/check icon.svg" alt="" srcset="">
+                    </span>
+                  </label>
+
+                </div>
+                <div class="flex font-outfit text-02 text-[3.75vw] md:text-[1vw]">
+                  <p class="mr-[10%]">1h</p>
+                  <ul class="list-disc">
+                    <li>Price varies </li>
+                  </ul>
+                  <p class="ml-[5%]">$12/unit</p>
+                </div>
+              </div>
+              <!-- check box item -->
+              <div class="flex flex-col rounded-lg shadow-lg p-[4%] mb-[5%] md:w-[33.6vw]">
+                <div class="flex justify-between">
+                  <p class="font-playfair font-[500] text-01 text-[4vw] md:text-[1.2vw]">Neurotoxin (Botox/Dysport/Xeomin)</p>
+                  <label class="relative inline-block">
+                    <input type="checkbox"
+                      class="appearance-none w-[8vw] h-[8vw] md:w-[1.83vw] md:h-[1.83vw] bg-01/5 rounded-md  checked:border-none peer">
+                    <span class="absolute top-[22%] left-[20%]   flex   opacity-0 peer-checked:opacity-100">
+                      <img class="w-[5vw] " src="assets/images/check icon.svg" alt="" srcset="">
+                    </span>
+                  </label>
+
+                </div>
+                <div class="flex font-outfit text-02 text-[3.75vw] md:text-[1vw]">
+                  <p class="mr-[10%]">1h</p>
+                  <ul class="list-disc">
+                    <li>Price varies </li>
+                  </ul>
+                  <p class="ml-[5%]">$12/unit</p>
+                </div>
+              </div>
+              <!-- check box item -->
+              <div class="flex flex-col rounded-lg shadow-lg p-[4%] mb-[5%] md:w-[33.6vw]">
+                <div class="flex justify-between">
+                  <p class="font-playfair font-[500] text-01 text-[4vw] md:text-[1.2vw]">Neurotoxin (Botox/Dysport/Xeomin)</p>
+                  <label class="relative inline-block">
+                    <input type="checkbox"
+                      class="appearance-none w-[8vw] h-[8vw] md:w-[1.83vw] md:h-[1.83vw] bg-01/5 rounded-md  checked:border-none peer">
+                    <span class="absolute top-[22%] left-[20%]   flex   opacity-0 peer-checked:opacity-100">
+                      <img class="w-[5vw] " src="assets/images/check icon.svg" alt="" srcset="">
+                    </span>
+                  </label>
+
+                </div>
+                <div class="flex font-outfit text-02 text-[3.75vw] md:text-[1vw]">
+                  <p class="mr-[10%]">1h</p>
+                  <ul class="list-disc">
+                    <li>Price varies </li>
+                  </ul>
+                  <p class="ml-[5%]">$12/unit</p>
+                </div>
+              </div>
+              
+            </div>
+
           </div>
         </div>
       </div>
