--- a/services-details.html
+++ b/services-details.html
@@ -29,92 +29,35 @@
   </head>
   <body class="overflow-x-hidden md:bg-white">
     <!-- Navbar -->
-    <header class="">
-      <nav
-        class="flex justify-between items-center w-[95%] md:w-[75%] mx-auto mt-[2vh] md:mt-[0.5vh]"
-      >
+    <header>
+      <nav class="flex justify-between items-center w-[95%] md:w-[75%] h-[55px] md:h-[5vw] mx-auto mt-[1vh] md:mt-[0.5vh]">
         <!-- Logo -->
-        <div>
+        <div class="logo z-50">
           <a href="index.html">
-            <img
-              class="w-12 md:w-auto cursor-pointer hover:scale-105 duration-300"
-              src="assets/images/Mask group.svg"
-              alt=""
-            />
+            <img class="w-[10vw] md:w-[5vw] cursor-pointer hover:scale-105 duration-300" src="assets/images/Mask group.svg" alt="Logo" />
           </a>
         </div>
-
+    
         <!-- Navigation Links -->
-        <div
-          class="nav-links z-50 md:static overflow-hidden absolute bg-05 md:bg-white md:min-h-fit min-h-[95%] left-0 top-[-100%] md:w-auto w-full flex items-center md:px-0 px-5"
-        >
-          <ul
-            class="flex md:flex-row md:text-[18px] text-[180%] mt-[-25vh] md:mt-[0%] font-outfit flex-col md:items-center items-center md:gap-[1.5vw] gap-6 text-02 w-full"
-          >
+        <div class="nav-links z-40 fixed top-0 left-0 w-full bg-05 md:bg-white md:min-h-fit min-h-[95%] md:w-auto flex items-center md:px-0 px-5 transition-transform transform -translate-y-full md:translate-y-0 md:static z-50">
+          <ul class="flex md:flex-row md:text-[18px] text-[180%] mt-[-25vh] md:mt-[0%] font-outfit flex-col md:items-center items-center md:gap-[1.5vw] gap-6 text-02 w-full">
             <li>
-              <img
-                class="md:hidden ml-[60vw] w-14"
-                src="assets/images/stars.svg"
-                alt=""
-              />
+              <img class="md:hidden ml-[60vw] w-14" src="assets/images/stars.svg" alt="" />
             </li>
-            <li>
-              <a
-                class="menu hover:text-01 duration-300 active"
-                href="index.html"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a class="menu hover:text-01 duration-300" href="aboutUs.html"
-                >About Us</a
-              >
-            </li>
-            <li>
-              <a class="menu hover:text-01 duration-300" href="services.html"
-                >Services</a
-              >
-            </li>
-            <li>
-              <a class="menu hover:text-01 duration-300" href="gallery.html"
-                >Gallery</a
-              >
-            </li>
-            <li>
-              <a class="menu hover:text-01 duration-300" href="blog.html"
-                >Blog</a
-              >
-            </li>
-            <li>
-              <a class="menu hover:text-01 duration-300" href="contactUs.html"
-                >Contact Us</a
-              >
-            </li>
+            <li><a class="menu hover:text-01 duration-300 active md:text-[1.1vw] text-[6vw]" href="index.html">Home</a></li>
+            <li><a class="menu hover:text-01 duration-300 md:text-[1.1vw] text-[6vw]" href="aboutUs.html">About Us</a></li>
+            <li><a class="menu hover:text-01 duration-300 md:text-[1.1vw] text-[6vw]" href="services.html">Services</a></li>
+            <li><a class="menu hover:text-01 duration-300 md:text-[1.1vw] text-[6vw]" href="gallery.html">Gallery</a></li>
+            <li><a class="menu hover:text-01 duration-300 md:text-[1.1vw] text-[6vw]" href="blog.html">Blog</a></li>
+            <li><a class="menu hover:text-01 duration-300 md:text-[1.1vw] text-[6vw]" href="contactUs.html">Contact Us</a></li>
           </ul>
-          <div
-            class="md:hidden w-full absolute font-alex text-06 opacity-5 ml-[-4vw] self-end text-[450%]"
-          >
-            <div>
-              <p class="w-full overflow-hidden whitespace-nowrap">
-                Beauty & Brawn Beauty & Brawn Beauty & Brawn Beauty & Brawn
-              </p>
-            </div>
-          </div>
         </div>
-
+    
         <!-- Button and Mobile Menu Icon -->
         <div class="flex items-center gap-6">
           <button>
-            <img
-              class="hidden md:block w-36 hover:scale-105 duration-300"
-              src="assets/images/Group 71.svg"
-              alt=""
-            />
-            <ion-icon
-              name="menu"
-              class="text-3xl text-01 cursor-pointer md:hidden"
-              onclick="mobileMenu(this)"
-            ></ion-icon>
+            <img class="hidden md:block w-[10vw] hover:scale-105 duration-300" src="assets/images/Group 71.svg" alt="Button" />
+            <ion-icon name="menu" class="text-3xl text-01 cursor-pointer md:hidden" onclick="mobileMenu(this)"></ion-icon>
           </button>
         </div>
       </nav>
